--- a/pop-up.html
+++ b/pop-up.html
@@ -1,22 +1,82 @@
+<link href="./css/styles.css" rel="stylesheet" />
+
 <div class="your-order-container">
-  <div class="your-order">
+  <div class="your-order-div">
     <h2 class="your-order-heading">Your Order</h2>
-    <button type="button" class="your-order-x"></button>
-    <ul>
-      <li>
-        <h3>Strawberry Basket</h3>
-        <p>Plant</p>
+    <!-- w buttonie ma być svg zamiast X-->
+    <button type="button" class="your-order-x">X</button>
+    <ul class="your-order-list">
+      <li class="your-order-list-child">
+        <div class="your-order-box box-one">
+          <h3>Strawberry Basket</h3>
+          <p class="your-order-paragraph">Plant</p>
+          <input type="checkbox" class="your-order-checkbox" />
+        </div>
       </li>
-      <li>
-        <h3>Apple Basket</h3>
-        <p>Plant</p>
+      <li class="your-order-list-child">
+        <div class="your-order-box box-two">
+          <h3>Apple Basket</h3>
+          <p class="your-order-paragraph">Plant</p>
+          <input type="checkbox" class="your-order-checkbox" />
+        </div>
       </li>
-      <li>
-        <h3>Fruits Basket</h3>
-        <p>Plant</p>
+      <li class="your-order-list-child">
+        <div class="your-order-box box-three">
+          <h3>Fruits Basket</h3>
+          <p class="your-order-paragraph">Plant</p>
+          <input type="checkbox" class="your-order-checkbox" />
+        </div>
       </li>
     </ul>
 
-    <form class=""></form>
+    <form class="your-order-form">
+      <div class="your-form-div">
+        <label class="your-order-label" for="user-name">
+          <input
+            class="your-order-input"
+            placeholder="Enter full name..."
+            type="text"
+            id="user-name"
+            name="user-name"
+          />
+        </label>
+      </div>
+      <div class="your-form-div">
+        <label class="your-order-label" for="user-email">
+          <input
+            class="your-order-input"
+            placeholder="Enter email..."
+            type="email"
+            id="user-email"
+            name="user-name"
+          />
+        </label>
+      </div>
+      <div class="your-form-div">
+        <label class="your-order-label" for="user-card">
+          <input
+            class="your-order-input"
+            placeholder="Enter card.."
+            type="text"
+            id="user-card"
+            name="user-card"
+          />
+        </label>
+      </div>
+      <div class="your-form-div">
+        <label class="your-order-label" for="user-comment">
+          <textarea
+            class="your-order-textarea"
+            placeholder="Enter comments..."
+            id="user-comment"
+            name="user-comment"
+          >
+          </textarea>
+        </label>
+      </div>
+      <div class="your-order-btn-area">
+        <button type="submit" class="your-order-btn">Submit</button>
+      </div>
+    </form>
   </div>
 </div>
